# pendulum-reward-shaping

./: .gitignore  PLAN.md  README.md  eval.py  main.py  pyproject.toml
src/: agent.py  ppo.py  wrappers.py
